feat(BalanceCard): Criação de ccomponente

--- a/src/app/features/home/home.html
+++ b/src/app/features/home/home.html
@@ -1,1 +1,5 @@
-<p>home works!</p>
+<app-balance-card [type]="'income'" [label]="'Income'" [value]="5"></app-balance-card>
+
+<app-balance-card [type]="'outcome'" [label]="'Outcome'" [value]="3"></app-balance-card>
+
+
