feat: estilização do BalanceCard

--- a/src/app/features/home/home.html
+++ b/src/app/features/home/home.html
@@ -1,5 +1,9 @@
-<app-balance-card [type]="'income'" [label]="'Income'" [value]="5"></app-balance-card>
+<app-balance-card [type]="'outcome'" [label]="'Gastos'" [value]="100"></app-balance-card>
 
-<app-balance-card [type]="'outcome'" [label]="'Outcome'" [value]="3"></app-balance-card>
+<app-balance-card [type]="'balance'" [label]="'Saldo'" [value]="100"></app-balance-card>
+
+<app-balance-card [type]="'income'" [label]="'Ganhos'" [value]="200"></app-balance-card>
+
+
 
 
