--- a/src/app/features/home/components/balance/balance.html
+++ b/src/app/features/home/components/balance/balance.html
@@ -1,5 +1,5 @@
-<app-balance-card class="card" [type]="'outcome'" [label]="'Gastos'" [value]="100"></app-balance-card>
+<app-balance-card class="card" [type]="'outcome'" [label]="'Gastos'" [value]="totalOutcomes()"></app-balance-card>
 
-<app-balance-card class="card" [type]="'balance'" [label]="'Saldo'" [value]="100"></app-balance-card>
+<app-balance-card class="card" [type]="'balance'" [label]="'Saldo'" [value]="balance()"></app-balance-card>
 
-<app-balance-card class="card" [type]="'income'" [label]="'Ganhos'" [value]="200"></app-balance-card>
+<app-balance-card class="card" [type]="'income'" [label]="'Ganhos'" [value]="totalIncomes()"></app-balance-card>
