--- a/src/app/features/home/home.html
+++ b/src/app/features/home/home.html
@@ -1,4 +1,6 @@
 <app-balance [transactions]="transactions()"></app-balance>
 
-
+@for (item of transactions(); track item) {
+  <app-transaction-item [transaction]="item"></app-transaction-item>
+}
 
