feat: criação do componente transaction-value

--- a/src/app/features/home/components/balance/components/balance-card/balance-card.scss
+++ b/src/app/features/home/components/balance/components/balance-card/balance-card.scss
@@ -1,10 +1,10 @@
 .income {
-  color: green;
+  color: var(--custom-color-success);
 }
 
 .outcome {
   color: var(--mat-sys-error);
-} 
+}
 
 .zero {
   color: var(--mat-sys-secundary);
