--- a/src/app/features/home/components/transaction-item/transaction-item.html
+++ b/src/app/features/home/components/transaction-item/transaction-item.html
@@ -1,10 +1,10 @@
-<mat-card class="card">  
+<mat-card class="card">
   <div>
     <div class="card-title">
       {{transaction().title}}
     </div>
     <div class="card-value">
-      {{transaction().value}}
+      <app-transaction-value [transaction]="transaction()"></app-transaction-value>
     </div>
   </div>
 
