--- a/src/app/features/home/home.html
+++ b/src/app/features/home/home.html
@@ -2,5 +2,7 @@
 
 @for (item of transactions(); track item) {
   <app-transaction-item [transaction]="item"></app-transaction-item>
-}
+} @empty {
+  <app-no-transactions></app-no-transactions>
+ }
 
