feat: ajusta layout do NoTransaction

--- a/src/app/features/home/components/no-transactions/no-transactions.html
+++ b/src/app/features/home/components/no-transactions/no-transactions.html
@@ -1,1 +1,6 @@
-<p class="no-transactions">Não há transações.</p>
+<mat-card>
+  <mat-card-content class="card-content">
+    Não há transações.
+  </mat-card-content>
+</mat-card>
+
