--- a/src/app/features/home/home.html
+++ b/src/app/features/home/home.html
@@ -1,8 +1,10 @@
 <app-balance [transactions]="transactions()"></app-balance>
 
-@for (item of transactions(); track item) {
-  <app-transaction-item [transaction]="item"></app-transaction-item>
-} @empty {
-  <app-no-transactions></app-no-transactions>
- }
+<div class="transactions">
+  @for (item of transactions(); track item) {
+    <app-transaction-item [transaction]="item"></app-transaction-item>
+  } @empty {
+    <app-no-transactions></app-no-transactions>
+  }
+</div>
 
